package com.alibaba.erosa.protocol.protobuf;

option java_package = "com.alibaba.erosa.protocol.protobuf";
option java_outer_classname = "ErosaEntry";
option optimize_for = SPEED;

/****************************************************************
 * message model
 *如果要在Enum中新增类型，确保以前的类型的下标值不变.
 ****************************************************************/
message Entry {
	/**协议头部信息**/
	optional Header						header 				= 1;
	
	/**打散后的事件类型**/
	optional EntryType					entryType			= 2 [default = ROWDATA];
	
	/**传输的二进制数组**/
	optional bytes						storeValue			= 3;	
}

/**message Header**/
message Header {
	/**协议的版本号**/
	optional int32 					version				= 1 [default = 1];	
	
	/**预留扩展**/
	repeated Pair					props				= 2;	
	
	/**binlog/redolog 文件名**/
	optional string					logfilename			= 3;
	
	/**binlog/redolog 文件的偏移位置**/
	optional int64 					logfileoffset		= 4;
	
	/** 变更数据的编码 **/
	optional string					serverencode		= 5;
	
	/**变更数据的执行时间 **/
	optional int64					executetime			= 6;
	
	/** 变更数据的来源**/
	optional Type					type				= 7;
	
	/** 变更数据的schemaname**/
	optional string					schemaname			= 8;
	
	/**变更数据的tablename**/
	optional string					tablename			= 9;	
	
	/**每个event的长度**/
	optional int64					eventlength         = 10;				
}

/**开始事务的一些信息**/
message TransactionBegin{
	
	/**执行时间**/
	optional int64			executeTime		=		1;
	
	/**事务号**/
	optional string			transactionId	=		2;
	
	/**预留扩展**/
	repeated Pair			props			=		3;	
}

/**message row 每行变更数据的数据结构**/
message RowData {

	/**tableId,由数据库产生**/
	optional int64	 		tableId			=		1;
	
	/**表名(忽略大小写)**/
	optional string 		tableName		=		2;
	
	/**schemaName(忽略大小写)**/
	optional string 		schemaName		=		3;
	
	/**数据变更类型**/
	optional EventType 		eventType		= 		4 [default = UPDATE];
	
	/**执行时间**/
	optional int64			executeTime		=		5;
	
	/**事务号**/
	optional string			transactionId	=		6;
	
	/**变更数据库的类型，默认是mysql**/
	optional Type			type			=		7 [default = MYSQL];
	
	/**Mysql only,数据库的编号**/
	optional int64	 		serverId		= 		8;

	/**数据库所在的区域标识**/
	optional string			source			= 		9;
	
	/** 标识是否是ddl语句  **/
	optional bool			isDdl			= 		10 [default = false];

	/** ddl的sql语句  **/
	optional string			sql 			= 		11;
	
	/** 字段信息，增量数据(修改前,删除前) **/
	repeated Column			beforeColumns  	= 		12;

	/** 字段信息，增量数据(修改后,新增后)  **/
	repeated Column			afterColumns	= 		13;
	
	/**预留扩展**/
	repeated Pair			props			=		14;	
	
	/**每个字段的数据结构**/
	message Column {
		/**字段下标**/
		optional int32		columnIndex		= 		1;
		
		/**字段类型**/
		optional int32 		type			= 		2;
		
		/**字段名称(忽略大小写)，在mysql中是没有的**/
		optional string		name			=		3;
		
		/**字段值,timestamp,Datetime是一个long型的数字**/
		optional string		value			= 		4;
		
		/**是否是主键**/
		optional bool 		isKey			= 		5;
		
		/**如果EventType=UPDATE,用于标识这个字段值是否有修改**/
		optional bool		updated			= 		6;
		
		/** 标识是否为空  **/
		optional bool		isNull			= 		7 [default = false];
		
		/**预留扩展**/
		repeated Pair		props			=		8;	
	}
}

/**结束事务的一些信息**/
message TransactionEnd{
	
	/**执行时间**/
	optional int64			executeTime		=		1;
	
	/**事务号**/
	optional string			transactionId	=		2;
	
	/**预留扩展**/
	repeated Pair			props			=		3;	
}

/**预留扩展**/
message Pair{
	optional string 		key				= 			1;	
	optional string 		value			= 			2;	
}

/**打散后的事件类型，主要用于标识事务的开始，变更数据，结束**/
enum EntryType{
	TRANSACTIONBEGIN 		=		1;
	ROWDATA					=		2;
	TRANSACTIONEND			=		3;
	MYSQL_FORMATDESCRIPTION	=		4;
	MYSQL_QUERY				=		5;
	MYSQL_ROTATE			=		6;
	MYSQL_STOP				=		7;
	MYSQL_OTHER				=		8;
	MYSQL_TABLEMAP			=		9;
}

/** 事件类型 **/
enum EventType {
    INSERT 		= 		1;
    UPDATE 		= 		2;
    DELETE 		= 		3;
    CREATE		= 		4;
    ALTER		= 		5;
    ERASE		= 		6;
}

/**数据库类型**/
enum Type {
    ORACLE		= 		1;
    MYSQL		= 		2;
    PGSQL		= 		3;
}